<resources>
    <string name="app_name">Water Test</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ph_test">PH TEST</string>
    <string name="ph_test_step1">Step 1: Take 10ml of water sample in the test bottle</string>
    <string name="ph_test_step2">Step 2: Add 3 – 4 drops pH – Reagent and mix well till water color changes</string>
    <string name="ph_test_step3">Step 3: Once the color changes press Test Complete button</string>
    <string name="ph_test_result">Select the color as per the change of water color that has occured in the test sample</string>
    <string name="f__test_step1">Step 1: Take 5ml of water sample in the test bottle</string>
    <string name="f__test_step2">Step 2: Add 5 drops of fluoride reagent -1 and mix well till the water color
changes.</string>
    <string name="f__test_step3">Step 3: Once the color changes press Test Complete button</string>
    <string name="tds_1">1. Place the  TDS meter inside the water glass. Press the ON button</string>
    <string name="tds_2">2. You can observe 0 value in the display</string>
    <string name="tds_3">3. Press the hold button, you can see value change</string>
    <string name="tds_4">4. Enter the new value in the text box below</string>
    <string name="tds_5">5. After entered press the below button to display result</string>
    <string name="ph_description">The term pH stands for “potential for hydrogen.”
The term pH is a measure of the concentration of hydrogen ions in a diluted solution. It can range from 0 to 14, with 7 denoting a neutral value. Acidic water has a pH below 7; alkaline water, above 7. The health effects of pH on drinking water depend upon where the pH falls within its range. The U.S. Environmental Protection Agency, which classifies pH as a secondary drinking water standard, recommends a pH between 6.5 and 8.5 for drinking water.
According to the World Health Organization, health effects are most pronounced in pH extremes. Drinking water with an elevated pH above 11 can cause skin, eye and mucous membrane irritation. On the opposite end of the scale, pH values below 4 also cause irritation due to the corrosive effects of low pH levels. WHO warns that extreme pH levels can worsen existing skin conditions.
In general, water with a pH less than 6.5 could be acidic, soft, and corrosive. Acidic water could contain metal ions such as iron, manganese, copper, lead, and zinc. In other words, acidic water contains elevated levels of toxic metals . Recommends a pH between 6.5 and 8.5 for drinking water.\n\n

High levels of lead in drinking water is a primary concern of pH. It places adults at risk for health problems such as cancer, stroke, kidney disease, memory problems and high blood pressure. Children are at a greater risk because their rapidly growing bodies absorb the contaminant more quickly.\n\n

Copper, Iron, Zinc and Manganese are also classified as secondary drinking water contaminants. These contaminants are likely to cause hard water and staining problems at home. But if found in elevated levels, they could cause a variety of health issues. That includes nausea, vomiting, diarrhea, stomach cramps, kidney disease, liver disease and nervous system problems.
</string>
    <string name="flouride_description">Health guide line value : 1.5 mg/L\n\n
Fluoride is found in all natural waters. Seawater contains 1.2-1.5 ppm of fluoride. Freshwater concentrations are usually lower ranging from 0.01 to 0.3 ppm. Higher concentrations of fluoride in water can be present near hot springs of volcanic origin .\n\n
Important for preventing dental decay and strengthening teeth, but can be harmful at high concentrations. Found naturally in rocks and waters and is sometimes present in industrial air pollution.\n\n


Fluoride Affects Many Tissues in Your Body Besides Your Teeth\n\n
Many assume that consuming fluoride is only an issue that involves your dental health. But according to a 500-page scientific review, fluoride is an endocrine disruptor that can affect your bones, brain, thyroid gland, pineal gland and even your blood sugar levels.2\n\n
There have been over 34 human studies and 100 animal studies linking fluoride to brain damage,3 including lower IQ in children, and studies have shown that fluoride toxicity can lead to a wide variety of health problems. Babies given fluoridated water in their formula are not only more likely to develop dental fluorosis, but may also have reduced IQ scores. In fact, a Harvard University meta-analysis funded by the National Institutes of Health (NIH) concluded that children who live in areas with highly fluoridated water have "significantly lower" IQ scores than those who live in low fluoride areas.\n\n
</string>
    <string name="tds_description">Water is a good solvent and picks up impurities easily.  Pure water -- tasteless, colorless, and odorless -- is often called the universal solvent.   Dissolved solids" refer to any minerals, salts, metals, cations or anions dissolved in water. Total dissolved solids (TDS) comprise inorganic salts (principally calcium, magnesium, potassium, sodium, bicarbonates, chlorides, and sulfates) and some small amounts of organic matter that are dissolved in water.
TDS in drinking-water originate from natural sources, sewage, urban run-off, industrial wastewater, and chemicals used in the water treatment process, and the nature of the piping or hardware used to convey the water, i.e., the plumbing
</string>
    <string name="ph_low">“The pH value of this water sample is below 6 . Exposure to low pH levels can result in bigger problems. That’s because acidic water allows the metals in your pipes to leach into your water supply. When these metals get into your water, they can wreak havoc on your plumbing system and lead to potential health problems.
When it comes to your plumbing system, acidic water can prematurely corrode your pipes and stain your sinks and drains. It can also stain your clothes and result in water that smells bad and tastes metallic.
When you consume these metals, neurological and reproductive issues can occur, along with the fact that many of these metals are carcinogenic.

</string>
    <string name="ph_high">“According to the World Health Organization, exposure to pH levels above 11 results in irritation of the eyes, skin and mucous membranes, as well as worsening symptoms of skin disorders.

</string>
    <string name="ph_normal">Drinking water must have a pH value of 6.5-8.5 to fall within EPA standards. The pH level of this water is in permissable limit</string>
    <string name="fl_low"></string>
    <string name="fl_normal">The fluoride of this water sample is less than 1.5 mg/L
“This drinking water has the permissible limit of fluoride “
</string>
    <string name="fl_high">The fluoride content in drinking water is higher than health guideline as per EPA.
High fluoride causes fluorosis. Babies given fluoridated water in their formula are not only more likely to develop dental fluorosis, but may also have reduced IQ scores. In fact, a Harvard University meta-analysis funded by the National Institutes of Health (NIH) concluded that children who live in areas with highly fluoridated water have "significantly lower" IQ scores than those who live in low fluoride areas.
</string>
    <string name="nitrate_desc">Nitrate is one of the most common groundwater contaminants in rural areas. It is regulated in drinking water primarily because excess levels can cause methemoglobinemia, or "blue baby" disease. Although nitrate levels that affect infants do not pose a direct threat to older children and adults, they do indicate the possible presence of other more serious residential or agricultural contaminants, such as bacteria or pesticides.\n\n
Nitrate in groundwater originates primarily from fertilizers, septic systems, and manure storage or spreading operations. Fertilizer nitrogen that is not taken up by plants, volatilized, or carried away by surface runoff leaches to the groundwater in the form of nitrate. This not only makes the nitrogen unavailable to crops, but also can elevate the concentration in groundwater above the levels acceptable for drinking water quality. Nitrogen from manure similarly can be lost from fields, barnyards, or storage locations. Septic systems also can elevate groundwater nitrate concentrations because they remove only half of the nitrogen in wastewater, leaving the remaining half to percolate to groundwater.\n\n
recommended limit for nitrate-nitrogen at 10 mg/L. T
</string>
    <string name="nitrate_step1">1.	Take 10ml of water sample in a test tube.</string>
    <string name="nitrate_step2">2.	Add a pinch of Nitrate reagent -1 mix well and wait for 5 minutes</string>
    <string name="nitrate_step3">3.	After 5 minutes take the 5 ml of  above water mix to another test tube</string>
    <string name="nitrate_step4">4.	Then add 3 drops of Nitrate reagent -2 to the second test tube water sample. Wait for 5 minutes with occasional shaking.</string>
    <string name="nitrate_step5">5.	Once the color change happened press test complete button</string>
    <string name="nitrate_safe">The nitrate value present in this water sample is  is under 10 PPM. The Nitrate value is in permissible limits.</string>
    <string name="nitrate_danger">The nitrate value present in this water sample is  higher than 10 PPM.
Nitrate is one of the most common groundwater contaminants in rural areas. It is regulated in drinking water primarily because excess levels can cause methemoglobinemia, or "blue baby" disease.
</string>
    <string name="nitrite_safe">This water is suitable for drinking purpose. The Nitrate values are in permissible limits.\n\nHealth guide line value : 3 mg/LT</string>
    <string name="chloride_step5">5. Test Complete</string>
    <string name="chloride_step1">1. Take 25 ml of water sample in a test tube.</string>
    <string name="chloride_step2">2. Add 5 drops of chloride reagent-1 and mix well until a distinct yellow colour develops.</string>
    <string name="chloride_step3">3. Add chloride reagent – 2, shake well after each drop until the colour changes from yellow to red.  Count the number of drops of chloride -2 required for color change.</string>
    <string name="chloride_step4">4. Once the color change happened from yellow to red, Enter the drop the count in the below text box. After Entered the value Please press on Submit button.</string>
    <string name="mb1">1. Fill the water sample into the Bottle up to the arrow mark. Screw the cap and shake gently.</string>
    <string name="mb2">2. Keep the bottle at room temperature (preferably at 30-37 centigrade) for 24-48 hours.</string>
    <string name="mb3">3. Observe the colourcolor change of medium against the colourcolor chart.</string>
    <string name="mb4">4. Add a few drops of some disinfectant (Dettol or phenyl) and discard the solution.</string>
</resources>